--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-	"name": "electron-dojo-cvfhub",
-	"version": "0.0.1",
-	"devDependencies": {
-		"electron-download": "~1.4.1",
-		"electron-packager": "5.2.0",
-		"extract-zip": "~1.4.1",
-		"grunt": "~0.4.5",
-		"grunt-contrib-clean": "~0.7.0",
-		"grunt-contrib-stylus": "~0.22.0",
-		"grunt-contrib-watch": "~0.6.1"
-	}
+  "name": "Electron Dojo Cvfhub",
+  "version": "0.1.0",
+  "description": "Electron Dojo Cvfhub Prototype",
+  "main": "src/main.js",
+  "scripts": {
+    "start": "electron ."
+  },
+  "devDependencies": {
+    "dojo": "^1.14.2",
+    "electron": "^3.0.9",
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0"	
+  }
 }
+
+
